[gd_scene load_steps=6 format=3 uid="uid://bvacrkmksxno3"]

[ext_resource type="Script" path="res://Vorota/vorota.gd" id="1_83je3"]
[ext_resource type="Texture2D" uid="uid://dm4sag442tuc" path="res://Vorota/vorota.png" id="1_krhmn"]
[ext_resource type="AudioStream" uid="uid://bgrfc1dywy8s6" path="res://Vorota/5-track-5.mp3" id="3_jlal8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnt2n"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxqu4"]
size = Vector2(40, 40)

[node name="vorota" type="StaticBody2D"]
z_index = 1
collision_layer = 256
collision_mask = 0
script = ExtResource("1_83je3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_krhmn")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_mnt2n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.002, 0.002)
shape = SubResource("RectangleShape2D_vxqu4")

[node name="Stage_proydena" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jlal8")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="Stage_proydena" to="." method="_on_stage_proydena_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
